- fixed modal overflow problem

--- a/AttendanceTracker-Web/AttendanceTracker-Web/Content/Home/Classes.css
+++ b/AttendanceTracker-Web/AttendanceTracker-Web/Content/Home/Classes.css
@@ -39,3 +39,8 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+#edit-modal {
+    max-height: 70% !important;
+    overflow: auto !important;
+}
